# slack_archive_bot

./: LICENSE  README.md  main.py  manifest_sample.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
src/: archive.py  channel_analytics.py  channel_members.py  send_message.py
tests/: test_archive.py  test_channel_analytics.py  test_channel_members.py  test_send_message.py
